@@ -6,9 +6,9 @@
 #define	USED
 #endif
 #ifdef	NROFF
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	4.16 (gritter) 9/18/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	4.17 (gritter) 9/20/05";
 #else	/* !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	4.16 (gritter) 9/18/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	4.17 (gritter) 9/20/05";
 #endif	/* !NROFF */
 /* SLIST */
 /*
@@ -33,8 +33,8 @@ nroff.d/n10.c: * Sccsid @(#)n10.c	1.19 (gritter) 9/11/05
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.21 (gritter) 9/18/05
 nroff.d/proto.h: * Sccsid @(#)proto.h	1.21 (gritter) 9/18/05
 nroff.d/tw.h: * Sccsid @(#)tw.h	1.5 (gritter) 9/8/05
-troff.d/afm.c: * Sccsid @(#)afm.c	1.29 (gritter) 9/18/05
-troff.d/afm.h: * Sccsid @(#)afm.h	1.10 (gritter) 9/11/05
+troff.d/afm.c: * Sccsid @(#)afm.c	1.30 (gritter) 9/20/05
+troff.d/afm.h: * Sccsid @(#)afm.h	1.11 (gritter) 9/20/05
 troff.d/dev.h: * Sccsid @(#)dev.h	1.7 (gritter) 9/8/05
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
 troff.d/makedev.c: * Sccsid @(#)makedev.c	1.10 (gritter) 9/8/05
